# alterware-launcher

./: CONTRIBUTING.md  Cargo.toml  README.md  client-args.md
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml
src/: cache.rs  cdn.rs  github.rs  global.rs  http.rs  http_async.rs  main.rs  misc.rs  self_update.rs  structs.rs
