[package]
name = "alterware-launcher"
version = "0.11.5"
edition = "2021"
build = "res/build.rs"

[profile.release]
opt-level = "s"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
semver = "1.0"
colored = "3.0"
once_cell = "1.21"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
futures = "0.3"
indicatif = "0.18"
tokio = { version="1.47", features = ["rt-multi-thread", "macros"] }
simple-log = "2.4"
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", default-features = false, features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
# todo: update to 2.0.x; needs testing on windows
steamlocate = "=2.0.0-beta.2"
mslnk = "0.1"
self-replace = "1.5"

[build-dependencies]
winresource = "0.1"
static_vcruntime = "3.0"

[dev-dependencies]
strip-ansi-escapes = "0.2"
serial_test = "3.4"

[package.metadata.winresource]
OriginalFilename = "alterware-launcher.exe"
FileDescription = "AlterWare Launcher"
ProductName = "github.com/alterware/alterware-launcher"
